Add styles to navbar

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,11 @@ li {
   list-style: none;
   padding: 0 0.5rem;
 }
+
+.app-container {
+  margin: 0;
+  padding: 0 0 8%;
+  border-radius: 4px;
+  box-shadow: 0 0 60px 0 rgb(0 0 0 / 15%);
+  background-color: gray;
+}
