--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,31 +1,40 @@
-header {
+header, nav, ul {
   display: flex;
-  justify-content: space-between;
-  padding: 10px 10px 20px 10px;
 }
 
-nav {
+header {
   display: flex;
-  justify-content: space-between;
+  padding: 10px 10px 20px 10px;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #fff;
+  align-items: center;
 }
 
 h1 {
   color: #0290ff;
+  font-weight: bold;
 }
 
-ul {
+.nav-links {
+  display: flex;
+  flex-grow: 1;
+  list-style-type: none;
+  grid-gap: 40px;
+  gap: 40px;
+  letter-spacing: 1.9px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.nav-user {
+  position: absolute;
+  right: 100px;
   display: flex;
   align-items: center;
-  list-style: none;
-  gap: 10px;
-}
-
-li {
-  list-style: none;
-  cursor: pointer;
-}
-
-li a {
-  color: #121212;
-  padding: 0 10px;
+  justify-content: center;
+  border: solid 1px #e8e8e8;
+  border-radius: 50%;
+  padding: 14px;
 }
