Add styles to Book

--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,5 @@ li {
   padding: 0 0 8%;
   border-radius: 4px;
   box-shadow: 0 0 60px 0 rgb(0 0 0 / 15%);
-  background-color: gray;
+  background-color: #fff;
 }
