Add styles to AddBook

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,6 @@
-header, nav, ul {
+header,
+nav,
+ul {
   display: flex;
 }
 
@@ -8,11 +10,15 @@ header {
   font-family: 'Montserrat', sans-serif;
   background-color: #fff;
   align-items: center;
+  padding-inline-start: 40px;
+  border-bottom: 1px solid #e8e8e8;
 }
 
 h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.875rem;
+  font-weight: 700;
   color: #0290ff;
-  font-weight: bold;
 }
 
 .nav-links {
