--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -2,7 +2,7 @@
   display: flex;
   border-radius: 4px;
   border: 1px solid #e8e8e8;
-  padding: 2rem;
+  padding: 8px;
   margin-right: 40px;
 }
 
@@ -26,13 +26,16 @@
   font-size: 0.875rem;
   font-weight: bold;
   letter-spacing: normal;
+  margin: 2px;
 }
 
 .book-title {
   font-size: 1.375rem;
   font-weight: bold;
   letter-spacing: -0.2px;
-  font-family: "Roboto Slab",serif;
+  font-family: "Roboto Slab", serif;
+  color: #121212;
+  margin: 2px;
 }
 
 .book-author {
@@ -40,7 +43,8 @@
   font-weight: 300;
   letter-spacing: normal;
   color: #4386bf;
-  font-family: "Roboto Slab",serif;
+  font-family: "Roboto Slab", serif;
+  margin: 2px;
 }
 
 .book-button {
@@ -48,7 +52,7 @@
   justify-content: flex-start;
   align-items: center;
   margin-top: 1.313rem;
-  font-family: "Roboto Slab",serif;
+  font-family: "Roboto Slab", serif;
 }
 
 .book-button > button {
@@ -86,6 +90,7 @@
   font-size: 2rem;
   letter-spacing: normal;
   margin: 1px;
+  color: #121212;
 }
 
 .progress-status {
