--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -78,7 +78,7 @@
   align-items: center;
   gap: 1.313rem;
   border-right: solid 1px #e8e8e8;
-  padding-right: 4.938rem;
+  padding-right: 150px;
 }
 
 .progress-info {
