--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -40,7 +40,11 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: solid 1px #e8e8e8;
   border-radius: 50%;
   padding: 14px;
+}
+
+img {
+  width: 4rem;
+  cursor: pointer;
 }
